body image/footer

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="./style.css" media="screen">
     <title>Villa Homes</title>
     <meta name="description" content="Villa Homes">
   </head>
   <body>
 
-    <div id="container">
       <header>
         <h1>Villa Homes</h1>
         <h3>Painting & Drywall</h3>
@@ -24,16 +24,12 @@
       </header>
 
       <div id="body">
-        <div id="body-content">
-
-        </div>
+        <img src="./images/outdoors.jpg" alt="House" title="House">
+          <div id="body-content"></div>
+        </img>
       </div>
 
-      <footer>Kerrville, Tx (830)257-2522</footer>
-    </div>
-
-
-
+      <footer>Kerrville, Tx<span>(830)257-2522</span>Henry Villarreal, Owner<span></span></footer>
 
   </body>
 </html>
