--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Slabo+27px|Roboto+Condensed:700" rel="stylesheet">
     <link rel="stylesheet" href="./style.css" media="screen">
     <title>Villa Homes</title>
     <meta name="description" content="Villa Homes">
@@ -9,8 +10,7 @@
   <body>
 
       <header>
-        <h1>Villa Homes</h1>
-        <h3>Painting & Drywall</h3>
+        <h1>Villa Homes<span>Painting & Drywall</span></h1>
         <div id="navbar">
           <ul>
             <li><a href="#">Home</a></li>
@@ -30,6 +30,6 @@
       </div>
 
       <footer>Kerrville, Tx<span>(830)257-2522</span>Henry Villarreal, Owner<span></span></footer>
-
+    <script src="./script.js" charset="utf-8"></script>
   </body>
 </html>
