--- a/index.html
+++ b/index.html
@@ -31,5 +31,6 @@
 
       <footer>Kerrville, Tx<span>(830)257-2522</span>Henry Villarreal, Owner<span></span></footer>
     <script src="./script.js" charset="utf-8"></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
   </body>
 </html>
