added fade animation to body

--- a/index.html
+++ b/index.html
@@ -13,24 +13,41 @@
         <h1>Villa Homes<span>Painting & Drywall</span></h1>
         <div id="navbar">
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">History</a></li>
-            <li><a href="#">Photo Gallery</a></li>
+            <li><a href="#" id="home">Home</a></li>
+            <li><a href="#" id="about">About</a></li>
+            <li><a href="#" id="services">Services</a></li>
+            <li><a href="#" id="contact">Contact</a></li>
+            <li><a href="#" id="history">History</a></li>
+            <li><a href="#" id="gallery">Photo Gallery</a></li>
           </ul>
         </div>
       </header>
 
       <div id="body">
-        <img src="./images/outdoors.jpg" alt="House" title="House">
-          <div id="body-content"></div>
+        <img id="body-image" src="./images/outdoors.jpg" alt="House" title="House">
+          <div id="body-content">
+            <div id="about-body">
+              about
+            </div>
+            <div id="services-body">
+              services
+            </div>
+            <div id="contact-body">
+              contact
+            </div>
+            <div id="history-body">
+              history
+            </div>
+            <div id="gallery-body">
+              gallery
+            </div>
+          </div>
         </img>
       </div>
 
       <footer>Kerrville, Tx<span>(830)257-2522</span>Henry Villarreal, Owner<span></span></footer>
-    <script src="./script.js" charset="utf-8"></script>
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-  </body>
+
+      <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+      <script src="./scripts/script.js" charset="utf-8"></script>
+    </body>
 </html>
