adding shells to links

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Roboto|Slabo+27px|Roboto+Condensed:700" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css" media="screen">
     <title>Villa Homes</title>
     <meta name="description" content="Villa Homes">
@@ -26,19 +27,70 @@
       <div id="body">
         <img id="body-image" src="./images/outdoors.jpg" alt="House" title="House">
           <div id="body-content">
-            <div id="about-body">
-              about
+            <div id="about-body" class="bodies">
+              <h3>Villa Homes</h3>
+              "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident."
+              <br><br><br>
+              "Sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
             </div>
-            <div id="services-body">
-              services
+            <div id="services-body" class="container bodies">
+              <div class="row">
+                <div class="col-sm-6">
+                  <h3>Painting</h3>
+                  <ul>
+                    <li>phoenecian painting</li>
+                    <li>interior and exterior</li>
+                    <li>can match any paint in</li>
+                    <li>we use water base and oil base paints</li>
+                    <li>cabinets</li>
+                      <li>Oil paint</li>
+                      <li>Water based</li>
+                      <li>Lacquer</li>
+                    <li>we custom tint all of our primer for paint and primer</li>
+                    <li>we always pva berfore paint , which guarantees to last longer</li>
+                    <li>we have a 3,000 sq. Ft spray booth for trim, cabinets and door</li>
+                    <li>stain door and trim</li>
+                      <li>We always stain , them use a sanding sealer then the finish</li>
+                    <li>faux painting</li>
+                    <li>crackle painting on cabinets</li>
+                    <li>antiquing on cabinets and trim</li>
+                      <li>tea stains</li>
+                  </ul>
+                </div>
+                <div class="col-sm-6">
+                  <h3>Drywall</h3>
+                  <ul>
+                    <li>patch work</li>
+                    <li>spray textures or hand texture , will elaborate in time</li>
+                    <li>we have hoppers and 50 gallon machines</li>
+                    <li>Pop corn removal</li>
+                    <li>We also do stucco</li>
+                  </ul>
+                </div>
+              </div>
             </div>
-            <div id="contact-body">
-              contact
+            <div id="contact-body" class="container bodies">
+              <div class="row">
+                <div class="col-sm-4">
+                  <h3>Contact us</h3>
+
+                </div>
+                <div class="col-sm-4">
+                  <h3>Drywall</h3>
+
+                </div>
+                <div class="col-sm-4">
+                  <h3>Drywall</h3>
+
+                </div>
+              </div>
             </div>
-            <div id="history-body">
-              history
             </div>
-            <div id="gallery-body">
+            <div id="history-body" class="bodies">
+              <h3>Our History</h3>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </div>
+            <div id="gallery-body" class="bodies">
               gallery
             </div>
           </div>
